--- a/travis.yml
+++ b/travis.yml
@@ -1,3 +1,3 @@
 language: objective-c
-xcode_project: iOS/tests/iOSUnitTests/pubnub.xcodeproj
-xcode_scheme: pubnubTests
+xcode_project: cocoa/PubNubMacOSTestApplication/PubNubMacOSTestApplication.xcodeproj
+xcode_scheme: PubNubMacOSTestApplication
