--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: objective-c
-xcode_project: cocoa/PubNubMacOSTestApplication/PubNubMacOSTestApplication.xcodeproj
-xcode_scheme: PubNubMacOSTestApplication
+//xcode_project: cocoa/PubNubMacOSTestApplication/PubNubMacOSTestApplication.xcodeproj
+//xcode_scheme: PubNubMacOSTestApplication
+
+xcode_project: iOS/tests/iOSUnitTests/pubnub.xcodeproj
+xcode_scheme: pubnubTests
+xcodebuild test -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
