--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ language: objective-c
 
 xcode_project: iOS/tests/iOSUnitTests/pubnub.xcodeproj
 xcode_scheme: pubnubTests
-xcodebuild test -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+script: xcodebuild test -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
