--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,5 @@
+before_install:
+ - sudo systemsetup -settimezone Europe/Zaporozhye
+
 language: objective-c
 script: xcodebuild test -project iOS/tests/iOSUnitTests/pubnub.xcodeproj -scheme pubnubTestsDebug -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
