--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ before_install:
  - sudo systemsetup -settimezone Europe/Zaporozhye
 
 language: objective-c
-script: xcodebuild test -project iOS/tests/iOSUnitTests/pubnub.xcodeproj -scheme pubnubTestsDebug -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+script: xcodebuild test -project iOS/tests/iOSUnitTests/pubnub.xcodeproj -scheme pubnubTests -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
