--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 before_install:
- - sudo systemsetup -settimezone Europe/Zaporozhye
+- sudo systemsetup -settimezone Europe/Zaporozhye
 
 language: objective-c
-script: xcodebuild test -project iOS/tests/iOSUnitTests/pubnub.xcodeproj -scheme pubnubTestsDebugVa -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+script:
+- xcodebuild -showsdks
+- xcodebuild build -project iOS/iPadDemoApp/pubnub.xcodeproj -sdk iphonesimulator ARCHS=i386 ONLY_ACTIVE_ARCH=YES VALID_ARCHS=i386
+- xcodebuild test -project iOS/tests/iOSUnitTests/pubnub.xcodeproj -scheme pubnubTestsDebug -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
