--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,4 @@ language: objective-c
 script:
 - xcodebuild -showsdks
 - xcodebuild build -project iOS/iPadDemoApp/pubnub.xcodeproj -sdk iphonesimulator ARCHS=i386 ONLY_ACTIVE_ARCH=YES VALID_ARCHS=i386
+- xcodebuild test -project iOS/tests/iOSUnitTests/pubnub.xcodeproj -scheme pubnubTestsDebug -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
