--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+notifications:
+email:
+- tullerVal@gmail.com
+- tuller@bk.ru
+
 before_install:
 - sudo systemsetup -settimezone Europe/Zaporozhye
 
