--- a/iOS/tests/iOSUnitTests/pubnub.xcodeproj/xcshareddata/xcschemes/pubnubTestsDebug.xcscheme
+++ b/iOS/tests/iOSUnitTests/pubnub.xcodeproj/xcshareddata/xcschemes/pubnubTestsDebug.xcscheme
@@ -64,6 +64,15 @@
                <Test
                   Identifier = "PAMTestError">
                </Test>
+               <Test
+                  Identifier = "AbbreviatedPresenceTest">
+               </Test>
+               <Test
+                  Identifier = "ApnsToken">
+               </Test>
+               <Test
+                  Identifier = "BadJsonTest">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
