--- a/iOS/tests/iOSUnitTests/pubnub.xcodeproj/xcshareddata/xcschemes/pubnubTestsDebug.xcscheme
+++ b/iOS/tests/iOSUnitTests/pubnub.xcodeproj/xcshareddata/xcschemes/pubnubTestsDebug.xcscheme
@@ -73,6 +73,9 @@
                <Test
                   Identifier = "BadJsonTest">
                </Test>
+               <Test
+                  Identifier = "SendBigMessage">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
