--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ env:
     secure: A8/KQlKn1BqiutopWcmIg8eh3YeBlIiO6xeDE36QFyyEBiMeeUWd5daXH+2azU0IraBIxxg7TcmKoBnKgtyrzQiAQqGH703PMdzILKercSGIfVcuAiJ6fIWF94v7HfP0wrKzrvwuLSwKK0CP4gv56/lv/f/aIw1Las1L99fFuOk=
 
 
-after_success: ./update-gh-pages.sh
+after_script: ./update-gh-pages.sh
 
